@@ -2,15 +2,14 @@ package io.github.thebusybiscuit.slimefun4.implementation.items.multiblocks;
 
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
 
+import org.bukkit.Bukkit;
 import org.bukkit.Effect;
 import org.bukkit.Material;
-import org.bukkit.Sound;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
 import org.bukkit.block.BlockState;
@@ -19,9 +18,11 @@ import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 
+import io.github.thebusybiscuit.slimefun4.api.events.MultiBlockCraftEvent;
 import io.github.thebusybiscuit.slimefun4.api.items.ItemGroup;
 import io.github.thebusybiscuit.slimefun4.api.items.SlimefunItemStack;
 import io.github.thebusybiscuit.slimefun4.core.multiblocks.MultiBlockMachine;
+import io.github.thebusybiscuit.slimefun4.core.services.sounds.SoundEffect;
 import io.github.thebusybiscuit.slimefun4.implementation.Slimefun;
 import io.github.thebusybiscuit.slimefun4.implementation.SlimefunItems;
 import io.github.thebusybiscuit.slimefun4.utils.SlimefunUtils;
@@ -78,11 +79,14 @@ public class OreWasher extends MultiBlockMachine {
 
         recipes.add(SlimefunItems.SIFTED_ORE);
         recipes.add(SlimefunItems.GOLD_DUST);
+
+        recipes.add(new ItemStack(Material.SAND));
+        recipes.add(SlimefunItems.SALT);
     }
 
     @Override
-    public List<ItemStack> getDisplayRecipes() {
-        return recipes.stream().map(items -> items[0]).collect(Collectors.toList());
+    public @Nonnull List<ItemStack> getDisplayRecipes() {
+        return recipes.stream().map(items -> items[0]).toList();
     }
 
     @Override
@@ -90,15 +94,14 @@ public class OreWasher extends MultiBlockMachine {
         Block dispBlock = b.getRelative(BlockFace.UP);
         BlockState state = PaperLib.getBlockState(dispBlock, false).getState();
 
-        if (state instanceof Dispenser) {
-            Dispenser disp = (Dispenser) state;
+        if (state instanceof Dispenser disp) {
             Inventory inv = disp.getInventory();
 
             for (ItemStack input : inv.getContents()) {
                 if (input != null) {
                     if (SlimefunUtils.isItemSimilar(input, SlimefunItems.SIFTED_ORE, true)) {
                         ItemStack output = getRandomDust();
-                        Inventory outputInv = null;
+                        Inventory outputInv;
 
                         if (!legacyMode) {
                             /*
@@ -116,7 +119,12 @@ public class OreWasher extends MultiBlockMachine {
                             outputInv = findOutputInventory(output, dispBlock, inv);
                         }
 
-                        removeItem(p, b, inv, outputInv, input, output, 1);
+                        MultiBlockCraftEvent event = new MultiBlockCraftEvent(p, this, input, output);
+                        if (event.isCancelled()) {
+                            return;
+                        }
+
+                        removeItem(p, b, inv, outputInv, input, event.getOutput(), 1);
 
                         if (outputInv != null) {
                             outputInv.addItem(SlimefunItems.STONE_CHUNK);
@@ -127,14 +135,25 @@ public class OreWasher extends MultiBlockMachine {
                         ItemStack output = SlimefunItems.SALT;
                         Inventory outputInv = findOutputInventory(output, dispBlock, inv);
 
-                        removeItem(p, b, inv, outputInv, input, output, 2);
+                        MultiBlockCraftEvent event = new MultiBlockCraftEvent(p, this, input, output);
+                        if (event.isCancelled()) {
+                            return;
+                        }
+
+                        removeItem(p, b, inv, outputInv, input, event.getOutput(), 2);
 
                         return;
                     } else if (SlimefunUtils.isItemSimilar(input, SlimefunItems.PULVERIZED_ORE, true)) {
                         ItemStack output = SlimefunItems.PURE_ORE_CLUSTER;
                         Inventory outputInv = findOutputInventory(output, dispBlock, inv);
+                        MultiBlockCraftEvent event = new MultiBlockCraftEvent(p, this, input, output);
 
-                        removeItem(p, b, inv, outputInv, input, output, 1);
+                        Bukkit.getPluginManager().callEvent(event);
+                        if (event.isCancelled()) {
+                            return;
+                        }
+
+                        removeItem(p, b, inv, outputInv, input, event.getOutput(), 1);
 
                         return;
                     }
@@ -153,7 +172,7 @@ public class OreWasher extends MultiBlockMachine {
             outputInv.addItem(output.clone());
 
             b.getWorld().playEffect(b.getLocation(), Effect.STEP_SOUND, Material.WATER);
-            b.getWorld().playSound(b.getLocation(), Sound.ENTITY_PLAYER_SPLASH, 1, 1);
+            SoundEffect.ORE_WASHER_WASH_SOUND.playAt(b);
         } else {
             Slimefun.getLocalization().sendMessage(p, "machines.full-inventory", true);
         }
